# GitGulf

./: .gitignore  AUDIT_FIXES.md  Dockerfile  LICENSE  Package.swift  README.md  WARP.md  docker-build.sh  docker-compose.yml  docker-run.sh  docker-test.sh  pyproject.toml  setup.py
.build/: build.db  plugin-tools.yaml
.build/arm64-apple-macosx/debug/: description.json  gitgulf
.build/arm64-apple-macosx/debug/ModuleCache/: CoreFoundation-XSIPWMR9NELJ.swiftmodule  Foundation-2R4HFUR4BM1YT.swiftmodule  (+2 more)
.build/arm64-apple-macosx/release/: description.json  gitgulf
.github/workflows/: RELEASE_WORKFLOW.md  python-app.yml  release.yml
Sources/: GitGulf.swift  Repository.swift  RepositoryManager.swift  ShellService.swift  UIComposer.swift  main.swift
Sources/GitGulf/: GitGulf.swift  Repository.swift  RepositoryManager.swift  UIComposer.swift
Sources/GitGulfLib/GitGulf/: GitGulf.swift  RepositoryManager.swift
Sources/GitGulfLib/Model/: Repository.swift
Sources/GitGulfLib/Services/: ShellService.swift
Sources/GitGulfLib/UI/: UIRenderer.swift
Sources/Model/: Repository.swift
Sources/Services/: ShellService.swift
Sources/UI/: UIRenderer.swift
Sources/gitgulf/: main.swift
Tests/: README.md
Tests/GitGulfTests/: ANSIUtilitiesTests.swift  CLITests.swift  ErrorHandlingTests.swift  GitGulfOrchestrationTests.swift  LinuxCompatibilityTests.swift  PerformanceTests.swift  RepositoryManagerTests.swift  RepositoryTests.swift  ShellServiceTests.swift  TerminalWidthIntegrationTests.swift  UIRendererTests.swift  UITableAlignmentTests.swift
src/: main.py  repository.py  repository_manager.py  table.py
src/gitgulf/: main.py  repository.py  repository_manager.py  table.py
src/gitripple/: main.py  repository_manager.py
tests/: test_main.py  test_table.py
(+154 files in other folders)
