[tool.poetry]
name = "gitgulf"
version = "0.1.0"
description = "A CLI tool for managing multiple Git repositories collectively."
authors = ["Tycho Pandelaar <tychop@me.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tychop/gitgulf"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.scripts]
gitgulf = "gitgulf.main:main"
ggs = "gitgulf.main:main_s"
ggf = "gitgulf.main:main_f"
ggp = "gitgulf.main:main_p"
ggpr = "gitgulf.main:main_pr"
ggc = "gitgulf.main:main_c"
ggb = "gitgulf.main:main_b"
ggm = "gitgulf.main:main_m"
ggd = "gitgulf.main:main_d"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
